增加静态资源可以直接测试

--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "opn": "^3.0.3",
     "react": "^0.14.2",
     "react-bootstrap": "^0.28.1",
+    "react-dom": "^0.14.6",
     "react-router": "^1.0.0",
     "reflux": "^0.3.0",
     "thrift": "^0.9.3",
@@ -45,6 +46,8 @@
     "gulp-sequence": "^0.4.1",
     "gulp-uglify": "^1.4.2",
     "jsx-loader": "^0.13.2",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "mocha": "^2.2.5",
     "reactify": "^1.1.1",
     "should": "^7.1.0",
