--- a/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/src/main/webapp/WEB-INF/web.xml
@@ -9,14 +9,16 @@
         <param-name>portalExecutorCorePoolSize</param-name>
         <param-value>200</param-value>
     </context-param>
-    <context-param>
-        <param-name>spring.profiles.default</param-name>
-        <param-value>production</param-value>
-    </context-param>
+    <!--<context-param>-->
+        <!--<param-name>spring.profiles.default</param-name>-->
+        <!--<param-value>production</param-value>-->
+    <!--</context-param>-->
+
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
-            classpath*:/spring/applicationContext.xml
+            classpath*:/spring/applicationContext.xml,
+            classpath*:/spring/applicationContext-web.xml
         </param-value>
     </context-param>
 
@@ -60,17 +62,36 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <filter>
-        <filter-name>mvcFilter</filter-name>
-        <filter-class>com.sinosoft.one.mvc.MvcFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>mvcFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-        <dispatcher>REQUEST</dispatcher>
-        <dispatcher>FORWARD</dispatcher>
-        <dispatcher>INCLUDE</dispatcher>
-    </filter-mapping>
+    <!--<filter>-->
+        <!--<filter-name>mvcFilter</filter-name>-->
+        <!--<filter-class>com.sinosoft.one.mvc.MvcFilter</filter-class>-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>mvcFilter</filter-name>-->
+        <!--<url-pattern>/*</url-pattern>-->
+        <!--<dispatcher>REQUEST</dispatcher>-->
+        <!--<dispatcher>FORWARD</dispatcher>-->
+        <!--<dispatcher>INCLUDE</dispatcher>-->
+    <!--</filter-mapping>-->
+
+    <servlet>
+        <servlet-name>dispatcher</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>/WEB-INF/spring-mvc.xml</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>dispatcher</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
 
     <welcome-file-list>
         <welcome-file>/index</welcome-file>
