--- a/server/pom.xml
+++ b/server/pom.xml
@@ -34,7 +34,16 @@
             <url>http://123.57.5.3:9092/nexus/content/groups/public</url>
         </repository>
     </repositories>
-
+    <pluginRepositories>
+        <pluginRepository>
+            <id>nexus</id>
+            <name>Team Nexus Repository</name>
+            <url>http://123.57.5.3:9092/nexus/content/groups/public</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
     <dependencies>
         <dependency>
             <groupId>org.springframework.data</groupId>
