--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "reflux": "^0.3.0",
     "request": "^2.72.0",
     "thrift": "^0.9.3",
+    "whatwg-fetch": "^1.0.0",
     "zepto-commonjs": "^1.1.6-beta",
     "zeus-template": "*"
   },
