删除upload提交记录

--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "co": "^4.6.0",
+    "co-busboy": "^1.3.1",
     "commander": "^2.8.1",
     "extend": "^3.0.0",
     "history": "^1.13.1",
@@ -21,12 +22,13 @@
     "koa-static": "^1.4.9",
     "opn": "^3.0.3",
     "rctui": "^0.6.3",
-    "react": "^0.14.8",
-    "react-bootstrap": "^0.28.0",
-    "react-dom": "^0.14.8",
+    "react": "^15.2.1",
+    "react-bootstrap": "^0.30.0",
+    "react-dom": "^15.2.1",
+    "react-flip-move": "^2.4.2",
     "react-router": "^1.0.0",
     "refetch": "^0.2.1",
-    "reflux": "^0.3.0",
+    "reflux": "^0.4.1",
     "request": "^2.72.0",
     "thrift": "^0.9.3",
     "whatwg-fetch": "^1.0.0",
@@ -42,6 +44,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "chalk": "^1.1.1",
     "css-loader": "^0.23.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "fecs": "^0.4.4",
     "fecs-gulp": "^0.1.1",
     "file-loader": "^0.8.4",
@@ -56,11 +59,13 @@
     "gulp-rename": "^1.2.2",
     "gulp-sequence": "^0.4.1",
     "gulp-uglify": "^1.4.2",
+    "gulp-util": "^3.0.7",
     "jsx-loader": "^0.13.2",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "mocha": "^2.2.5",
     "reactify": "^1.1.1",
+    "shelljs": "^0.7.3",
     "should": "^7.1.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
