--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ client/node_modules
 client/client/src/vendor/bower_components/
 client/client/build
 client/log/
+client/upload/
 
 client/pid
 npm-debug.log
